syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.hydrosphere.serving.proto";
option java_outer_classname = "HealthProto";
option objc_class_prefix = "SRV";

package io.hydrosphere.serving.proto;

service HealthService {
    rpc health(HealthRequest) returns (HealthResponse) {}
}

message HealthRequest{
}

enum HealthStatus{
    UP = 0;
    DOWN = 1;
}

message Health{
    HealthStatus status = 1;
    string details = 2;
}

message HealthResponse{
    HealthStatus status = 1;
    map<string,Health> health = 2;
}